# VID-D20-Numerics

./: .zenodo.json  README.md  pyproject.toml
data/: generate_delta20.py  parameters.json  utils.py
notebooks/: README.md  infinity_alpha_comparison.ipynb  infinity_sector_convergence.ipynb  three_node_example.ipynb  vid_d20_numerics.ipynb
scripts/: build_DLSFH.py  compute_pseudoinverse.py  utils.py
src/: build_DLSFH.py  compute_pseudoinverse.py  vid_numerics.py
tests/: test_laplacian.py
vid_numerics/: __init__.py  laplacian.py  pseudoinverse.py
